--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ev3rt"
 version = "0.1.0"
 authors = ["Massimiliano Mantione <massimiliano.mantione@gmail.com>"]
+description = "Rust bindings for ev3rt"
+license= "MIT"
 
 [lib]
 crate-type = ["lib"]
